fix(FlowNavigation): alignment of labels and stepper dots and tooltips (#1326)

--- a/packages/components/src/common/panel/Panel.less
+++ b/packages/components/src/common/panel/Panel.less
@@ -31,6 +31,7 @@
   }
 
   &__arrow::before {
+    left: 0;
     content: '';
     transform: rotate(45deg);
     background: var(--color-background-elevated);
