--- a/packages/css/src/less/tooltip.less
+++ b/packages/css/src/less/tooltip.less
@@ -52,6 +52,7 @@
 .tooltip-inner {
   font-size: var(--font-size-14);
   max-width: @tooltip-max-width;
+  min-width: 120px;
   padding: var(--size-16) var(--size-16);
   color: var(--color-content-primary);
   text-align: center;
